--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,13 @@
 steps:
-- name: 'gcr.io/cloud-builders/golang'
+- name: 'golang:1.17'  # Utilizar la imagen oficial de Go desde Docker Hub
   args: ['go', 'mod', 'download', 'github.com/casbin/casbin/v2']
-- name: 'gcr.io/cloud-builders/golang'
+- name: 'golang:1.17'
   args: ['go', 'build', '-o', 'app']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/silver-tape-392620/astrafygov1', '.']
+  args: ['build', '-t', 'europe-west1-docker.pkg.dev/silver-tape-392620/astrafygo/astrafygov1:latest', '.']
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/silver-tape-392620/astrafygov1']
+  args: ['push', 'europe-west1-docker.pkg.dev/silver-tape-392620/astrafygo/astrafygov1:latest']
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['artifacts', 'import', 'docker', 'gcr.io/silver-tape-392620/astrafygov1', '--repository=astrafygo']
+  args: ['artifacts', 'import', 'docker', 'europe-west1-docker.pkg.dev/silver-tape-392620/astrafygo/astrafygov1:latest', '--artifact-url=europe-west1-docker.pkg.dev']
+options:
+  logging: CLOUD_LOGGING_ONLY
