--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,4 +34,6 @@ jobs:
 
       - name: Apply Kubernetes configuration
         run: |
-          kubectl apply -f Kubernetes/*.yaml
+          kubectl apply -f Kubernetes/deployment.yaml
+          kubectl apply -f Kubernetes/service.yaml
+          kubectl apply -f Kubernetes/ingress.yaml
