--- a/Kubernetes/deployment.yaml
+++ b/Kubernetes/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: go-astrafy
-          image: europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${{ github.sha }}
+          image: ${{ env.IMAGE_URL }}
           ports:
             - containerPort: 8080
