Set up kubernetes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,10 @@ jobs:
         run: gcloud container clusters get-credentials go-application-cluster --region europe-west1 --project silver-tape-392620
 
       - name: Verify cluster info
-        run: kubectl cluster-info
-
+        run: |
+          kubectl config use-context CONTEXT_NAME
+          kubectl cluster-info
+          
       - name: Build and push Docker image
         run: |
           gcloud auth configure-docker europe-west1-docker.pkg.dev
@@ -41,7 +43,7 @@ jobs:
 
       - name: Set image URL environment variable
         run: echo "IMAGE_URL=europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${{ github.sha }}" >> $GITHUB_ENV
-        
+
       - name: Apply Kubernetes configuration
         run: |
           kubectl apply -f Kubernetes/deployment.yaml
