Set up kubernetes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,9 @@ jobs:
 
       - name: Verify cluster info
         run: |
-          kubectl config use-context CONTEXT_NAME
+          kubectl config use-context gke_silver-tape-392620_europe-west1_go-application-cluster
           kubectl cluster-info
-          
+
       - name: Build and push Docker image
         run: |
           gcloud auth configure-docker europe-west1-docker.pkg.dev
