--- a/Kubernetes/service.yaml
+++ b/Kubernetes/service.yaml
@@ -1,12 +1,15 @@
-apiVersion: v1
-kind: Service
+apiVersion: "v1"
+kind: "Service"
 metadata:
-  name: go-astrafy-service
+  name: "go-astrafy-service"
+  namespace: "default"
+  labels:
+    app: "go-astrafy"
 spec:
-  selector:
-    app: go-astrafy
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8080
-  type: LoadBalancer
+  - protocol: "TCP"
+    port: 80
+  selector:
+    app: "go-astrafy"
+  type: "LoadBalancer"
+  loadBalancerIP: ""
