Set up kubernetes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,16 +13,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
       #- name: Configure Google Cloud credentials
       #  uses: google-github-actions/auth@v0.6.0
       #  with:
       #    service_account_key: ${{ secrets.GCP_SA_KEY }}
       #    export_default_credentials: true
 
-      - name: Configure Google Cloud credentials
-        uses: google-github-actions/auth@1.1.1
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+      #- name: Configure Google Cloud credentials
+      #  uses: google-github-actions/auth@1.1.1
+      #  with:
+      #    credentials_json: ${{ secrets.GCP_SA_KEY }}
       
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
