--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Verify cluster info
         run: |
           kubectl config use-context gke_silver-tape-392620_europe-west1_go-application-cluster
-          kubectl cluster-info
+          kubectl cluster-info dump
 
       - name: Build and push Docker image
         run: |
