--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,18 @@ jobs:
           sudo mv kubectl /usr/local/bin/
           sudo ln -s /usr/local/bin/kubectl /usr/local/bin/gke-gcloud-auth-plugin
 
+      #- id: 'auth'
+      #  name: 'Authenticate to Google Cloud'
+      #  uses: 'google-github-actions/auth@v1'
+      #  with:
+      #    credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v1'
         with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+          workload_identity_provider: 'silver-tape-392620.svc.id.goog'
+          service_account: '548636026919-compute@developer.gserviceaccount.com'
 
       - id: 'get-credentials'
         uses: 'google-github-actions/get-gke-credentials@v1'
