--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Get cluster credentials
         run: gcloud container clusters get-credentials go-application-cluster --region europe-west1 --project silver-tape-392620
 
+      - name: Verify cluster info
+        run: kubectl version
+
       #- name: Verify cluster info
       #  run: |
       #    kubectl version
