--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,9 +52,9 @@ jobs:
       #- name: Get cluster credentials
       #  run: gcloud container clusters get-credentials go-application-cluster --region europe-west1 --project silver-tape-392620
 
-      #- name: Verify cluster info
-      #  run: |
-      #    kubectl version
+      - name: Verify cluster info
+        run: |
+          kubectl cluster-info
 
       #- name: Build and push Docker image
       #  run: |
