--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,35 +37,21 @@ jobs:
 
       - id: 'get-pods'
         run: 'kubectl get pods'
-      #- name: Configure Google Cloud credentials
-      #  uses: google-github-actions/auth@v0.6.0
-      #  with:
-      #    service_account_key: ${{ secrets.GCP_SA_KEY }}
-      #    export_default_credentials: true
-
-      #- name: Configure Google Cloud credentials
-      #  uses: google-github-actions/auth@1.1.1
-      #  with:
-      #    credentials_json: ${{ secrets.GCP_SA_KEY }}
-      
-
-      #- name: Get cluster credentials
-      #  run: gcloud container clusters get-credentials go-application-cluster --region europe-west1 --project silver-tape-392620
 
       - name: Verify cluster info
         run: |
           kubectl cluster-info
 
-      #- name: Build and push Docker image
-      #  run: |
-      #    gcloud auth configure-docker europe-west1-docker.pkg.dev
-      #    docker build -t europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${{ github.sha }} .
-      #    docker push europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${{ github.sha }}
-#
-      #- name: Set image URL environment variable
-      #  run: echo "IMAGE_URL=europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${{ github.sha }}" >> $GITHUB_ENV
-#
-      #- name: Apply Kubernetes configuration
-      #  run: |
-      #    kubectl apply -f Kubernetes/deployment.yaml
-      #    kubectl apply -f Kubernetes/service.yaml
+      - name: Build and push Docker image
+        run: |
+          gcloud auth configure-docker europe-west1-docker.pkg.dev
+          docker build -t europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${{ github.sha }} .
+          docker push europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${{ github.sha }}
+
+      - name: Set image URL environment variable
+        run: echo "IMAGE_URL=europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${{ github.sha }}" >> $GITHUB_ENV
+
+      - name: Apply Kubernetes configuration
+        run: |
+          kubectl apply -f Kubernetes/deployment.yaml
+          kubectl apply -f Kubernetes/service.yaml
