Modifying variables in deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,20 +49,19 @@ jobs:
 
       - name: Build Docker image
         run: |
-          if [ -n "${{ github.ref }}" ]; then
-            export DOCKER_TAG="${{ github.ref }}"
-          else
-            export DOCKER_TAG="${{ github.sha }}"
+          DOCKER_TAG=$(basename "${{ github.ref }}")
+          if [ -z "${DOCKER_TAG}" ]; then
+            DOCKER_TAG=${{ github.sha }}
           fi
-          docker build -t astrafygov1:${{ env.DOCKER_TAG }} .
+          docker build -t astrafygov1:${DOCKER_TAG} .
           docker images
   
       - name: Publish Docker image
         if: github.event_name == 'push'
         run: |
-          docker tag astrafygov1:${{ env.DOCKER_TAG }} europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${{ env.DOCKER_TAG }}
+          docker tag astrafygov1:${DOCKER_TAG} europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${DOCKER_TAG}
           gcloud auth configure-docker europe-west1-docker.pkg.dev
-          docker push europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${{ env.DOCKER_TAG }}
+          docker push europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${DOCKER_TAG}
 
       #- name: Build and push Docker image
       #  run: |
@@ -72,7 +71,7 @@ jobs:
 
       - name: Apply Kubernetes configuration
         run: |
-          sed -i 's|IMAGE_URL|europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${{ env.DOCKER_TAG }}|' Kubernetes/deployment.yaml
+          sed -i 's|IMAGE_URL|europe-west1-docker.pkg.dev/silver-tape-392620/astrafydocker/astrafygov1:${DOCKER_TAG}|' Kubernetes/deployment.yaml
           cat Kubernetes/deployment.yaml
           kubectl apply -f Kubernetes/deployment.yaml
           kubectl apply -f Kubernetes/service.yaml
