--- a/Kubernetes/deployment.yaml
+++ b/Kubernetes/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: "go-astrafy"
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: "go-astrafy"
@@ -18,13 +18,13 @@ spec:
       containers:
       - name: "astrafygov1-sha256-1"
         image: "IMAGE_URL"
-        #resources:
-        #  limits:
-        #    cpu: "1"
-        #    memory: "1Gi"
-        #  requests:
-        #    cpu: "0.5"
-        #    memory: "512Mi"
+        resources:
+          limits:
+            cpu: "0.5"
+            memory: "1Gi"
+          requests:
+            cpu: "0.5"
+            memory: "512Mi"
 ---
 apiVersion: "autoscaling/v2"
 kind: "HorizontalPodAutoscaler"
