--- a/Kubernetes/deployment.yaml
+++ b/Kubernetes/deployment.yaml
@@ -21,10 +21,11 @@ spec:
         resources:
           limits:
             cpu: "0.1"
-            memory: "1Gi"
+            memory: "3Gi"
           requests:
             cpu: "0.1"
-            memory: "512Mi"
+            #memory: "512Mi"
+            memory: "2Gi"
 ---
 apiVersion: "autoscaling/v2"
 kind: "HorizontalPodAutoscaler"
