--- a/Kubernetes/deployment.yaml
+++ b/Kubernetes/deployment.yaml
@@ -24,8 +24,8 @@ spec:
             memory: "3Gi"
           requests:
             cpu: "0.1"
-            #memory: "512Mi"
-            memory: "1Gi"
+            memory: "512Mi"
+            #memory: "1Gi"
 ---
 apiVersion: "autoscaling/v2"
 kind: "HorizontalPodAutoscaler"
@@ -40,7 +40,7 @@ spec:
     name: "go-astrafy"
     apiVersion: "apps/v1"
   minReplicas: 3
-  maxReplicas: 6
+  maxReplicas: 60
   metrics:
   - type: "Resource"
     resource:
