--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,7 +14,8 @@ name: Build and Deploy to GKE
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches:
+      - main
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
