--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,15 +1,3 @@
-# This workflow will build a docker container, publish it to Google Container Registry, and deploy it to GKE when there is a push to the $default-branch branch.
-#
-# To configure this workflow:
-#
-# 1. Ensure that your repository contains the necessary configuration for your Google Kubernetes Engine cluster, including deployment.yml, kustomization.yml, service.yml, etc.
-#
-# 2. Create and configure a Workload Identity Provider for GitHub (https://github.com/google-github-actions/auth#setting-up-workload-identity-federation)
-#
-# 3. Change the values for the GAR_LOCATION, GKE_ZONE, GKE_CLUSTER, IMAGE, REPOSITORY and DEPLOYMENT_NAME environment variables (below).
-#
-# For more support on how to run the workflow, please visit https://github.com/google-github-actions/setup-gcloud/tree/master/example-workflows/gke-kustomize
-
 name: Build and Deploy to GKE
 
 on:
@@ -19,11 +7,11 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GAR_LOCATION: europe-west6 # TODO: update region of the Artifact Registry
-  GKE_CLUSTER: playground-394421-gke    # TODO: update to cluster name
-  GKE_ZONE: europe-west6-a   # TODO: update to cluster zone
-  DEPLOYMENT_NAME: go-webapp # TODO: update to deployment name
-  REPOSITORY: astrafy-docker # TODO: update to Artifact Registry docker repository
+  GAR_LOCATION: europe-west6
+  GKE_CLUSTER: playground-394421-gke
+  GKE_ZONE: europe-west6-a
+  DEPLOYMENT_NAME: go-webapp
+  REPOSITORY: astrafy-docker
   IMAGE: go-webapp
 
 jobs:
@@ -49,15 +37,10 @@ jobs:
         workload_identity_provider: 'projects/819195285046/locations/global/workloadIdentityPools/github/providers/github-provider'
         service_account: 'github-actions@playground-394421.iam.gserviceaccount.com'
 
-    # Alternative option - authentication via credentials json
-    # - id: 'auth'
-    #   uses: 'google-github-actions/auth@v0'
-    #   with:
-    #     credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-
     - name: Docker configuration
       run: |-
         echo ${{steps.auth.outputs.access_token}} | docker login -u oauth2accesstoken --password-stdin https://$GAR_LOCATION-docker.pkg.dev
+
     # Get the GKE credentials so we can deploy to the cluster
     - name: Set up GKE credentials
       uses: google-github-actions/get-gke-credentials@v0
@@ -69,25 +52,19 @@ jobs:
     - name: Build
       run: |-
         docker build \
+          --platform linux/amd64 \
           --tag "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA" \
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
           .
+
     # Push the Docker image to Google Artifact Registry
     - name: Publish
       run: |-
         docker push "$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA"
-    # Set up kustomize
-    # - name: Set up Kustomize
-    #   run: |-
-    #     curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-    #     chmod u+x ./kustomize
-    # Deploy the Docker image to the GKE cluster
+
     - name: Deploy
       run: |-
-        # replacing the image name in the k8s template
-        # ./kustomize edit set image LOCATION-docker.pkg.dev/PROJECT_ID/REPOSITORY/IMAGE:TAG=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE:$GITHUB_SHA
-        # ./kustomize build . | kubectl apply -f -
         kubectl apply -f deployment.yml
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
